--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,5 +6,5 @@ body {
   width: 100%;
   padding: 0;
   font-family: 'Poppins', sans-serif;
-  background-color: #ebb589;
+  background-color: #0f3664;
 }
