--- a/client/src/components/LoginForm.css
+++ b/client/src/components/LoginForm.css
@@ -8,29 +8,29 @@
   justify-content: center;
 }
 
-
-
 .input[type='text'] {
   width: 100%;
-  padding: 12px 20px;
+  padding: 8px 20px;
   margin: 8px 0;
   display: inline-block;
   border: 1px solid #ccc;
-  border-radius: 4px;
+  border-radius: 8px;
   box-sizing: border-box;
   background-color: #a3c2d4;
-  
+  font-size: 20px;
 }
 
 .input[type='submit'] {
   width: 100%;
   background-color: rgb(228, 138, 91, 0.6);
   color: white;
-  padding: 14px 20px;
+  padding: 8px 20px;
   margin: 8px 0;
   border: none;
-  border-radius: 4px;
+  border-radius: 8px;
   cursor: pointer;
+  justify-content: center;
+  font-size: 20px;
 }
 
 .input[type='submit']:hover {
