--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,6 +5,6 @@ body {
   margin: 0;
   width: 100%;
   padding: 0;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   background-color: #0f3664;
 }
