--- a/client/src/components/HomePage/HomePage.css
+++ b/client/src/components/HomePage/HomePage.css
@@ -15,7 +15,7 @@
   height: 43vh;
   border-radius: 16px 16px 4px 4px;
   /* border: solid; */
-  background-color: #70a6c880;
+  background-color: rgba(112, 166, 200, 0.2);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -61,7 +61,7 @@
 }
 
 .game-option:after {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
@@ -70,10 +70,9 @@
   background: rgba(42, 128, 139, 0.5);
   opacity: 0;
   border-radius: 15px;
-
 }
 .game-option:before {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
@@ -82,7 +81,6 @@
   /* background: url(icon-path); */
   opacity: 0;
   border-radius: 16px;
-
 }
 
 .game-option:hover:before,
@@ -90,9 +88,9 @@
   opacity: 1;
 }
 
-.game-option-text{
-  font-family: 'Montserrat', sans-serif;
+.game-option-text {
+  font-family: "Montserrat", sans-serif;
   font-size: 20px;
   font-weight: 600;
-  color:rgb(255, 255, 255);
+  color: rgb(255, 255, 255);
 }
